# ai-agentic-graph-debugging-assignment4

./: .env.example  .gitignore  README.md  pyproject.toml
artifacts/diagrams/: architecture_block.mmd  bug_path.mmd  oop_parameter_diagram.mmd
artifacts/graphify/: .graphify_root  GRAPH_REPORT.md  GRAPH_TREE.html  manifest.json
artifacts/validation/: baseline_naive_files_read.txt  baseline_naive_metrics.json  centrality_suspect_ranking.csv  centrality_suspect_ranking.json  centrality_suspect_ranking_top20.txt  graph_guided_agent_files_read.txt  graph_guided_agent_metrics.json  stage10_after_success.txt  stage10_before_failure.txt  stage10_fix_diff.txt  token_efficiency_comparison.json  token_efficiency_table.csv
config/: default.toml
docs/: AI_WORKFLOW.md  COSTS.md  DECISIONS.md  PLAN.md  PRD.md  PRD_centrality_ranking.md  PRD_graph_guided_agent.md  PROMPTS.md  QUALITY.md  REQUIREMENTS_AUDIT.md  SUBMISSION_CHECKLIST.md  TODO.md
obsidian/: README.md  architecture-map.md  bug-investigation-seed.md  graph-communities.md  graphify-overview.md  hot.md  index.md  open-questions.md  parameter-subsystem.md  research-questions.md  reverse-engineering-analysis.md  sources.md  token-efficiency-plan.md
reports/: baseline_naive_investigation.md  before_after.md  bug_analysis.md  bug_fix_validation.md  bug_validation.md  final_audit.md  graph_guided_agent.md  graphify_run.md  obsidian_vault.md  original_extension.md  repository_selection.md  reverse_engineering.md  target_repository_acquisition.md  token_efficiency.md
src/ex04_graph_debugger/: __init__.py  agent_state.py  centrality_ranking.py  graph_guided_agent.py  metrics.py  nodes.py  source_reader.py  version.py
target_repo/: README.md
target_repo/luigi_buggy/test/: parameter_test.py
tests/unit/: test_centrality_ranking.py  test_graph_guided_agent.py  test_version.py
