[project]
name = "ex04-graph-debugger"
version = "0.1.0"
description = "Agentic, graph-guided debugging of Luigi bug 3 (BugsInPy) for Assignment 04 — MaRs-777"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MaRs-777" }]

# NOTE: dependencies are intentionally minimal at the skeleton stage.
# Agent/Graphify/token-accounting deps are added in their respective stages,
# after PRD/PLAN/TODO approval (see docs/DECISIONS.md D-006).
dependencies = [
    "langgraph>=1.2.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
# Placeholders for later stages (NOT installed yet):
# agent = ["langgraph", "langchain-anthropic"]   # confirmed in agent stage (D-004)
# graph = ["networkx"]                            # if Graphify post-processing needs it

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ex04_graph_debugger"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
# Lint only OUR code. Vendored target source and generated artifacts are out of scope.
extend-exclude = ["target_repo", "artifacts", "obsidian", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

# Project-specific quality rule (enforced by a custom gate, see docs/QUALITY.md):
# every Python file under src/ must be <= 150 lines.
[tool.ex04.quality]
max_python_file_lines = 150
