[project]
name = "ex04-graph-debugger"
# Versioning starts at 1.00 per the course guideline (single source of truth also in
# src/ex04_graph_debugger/version.py, guarded by tests/unit/test_version.py).
version = "1.00"
description = "Agentic, graph-guided debugging of Luigi bug 3 (BugsInPy) for Assignment 04 — MaRs-777"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MaRs-777" }]

# Runtime dependencies for the submitted deterministic workflow (LangGraph graph-guided agent).
dependencies = [
    "langgraph>=1.2.5",
]

[project.optional-dependencies]
# Development dependencies for pytest, coverage, and Ruff quality gates.
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ex04_graph_debugger"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
# Lint only OUR code. Vendored target source and generated artifacts are out of scope.
extend-exclude = ["target_repo", "artifacts", "obsidian", ".venv"]

[tool.ruff.lint]
# Guideline rule set: pycodestyle (E/W), pyflakes (F), isort (I), pep8-naming (N),
# pyupgrade (UP), flake8-bugbear (B), flake8-comprehensions (C4), flake8-simplify (SIM).
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Coverage gate: enforce >= 85% on the project package (pytest-cov in the dev extra).
addopts = "-q --cov=src/ex04_graph_debugger --cov-report=term-missing"

[tool.coverage.run]
source = ["src/ex04_graph_debugger"]

[tool.coverage.report]
fail_under = 85
show_missing = true

# Project-specific quality rule (enforced by a custom gate, see docs/QUALITY.md):
# every Python file under src/ must be <= 150 lines.
[tool.ex04.quality]
max_python_file_lines = 150
